--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.0",
-        "another-vendor/package": "1.*"
+        "php": ">=7.0"
     },
     "authors": [{
         "name": "Dwi BudUt",
